--- a/bitirme_css/vizyonumuz.html
+++ b/bitirme_css/vizyonumuz.html
@@ -40,7 +40,7 @@
             <!-- Hero Content(Jumbotron) -->
             <div class="col-sm-8 offset-sm-2">
                 <div class="h-100 p-5 bg-light border rounded-3"><!-- examples->Jumbotron -->
-                    <h2 class="text-center display-1">Iletisim</h2><!-- class="text-center": ortalamak için -->
+                    <h2 class="text-center display-1">Vizyonumuz</h2><!-- class="text-center": ortalamak için -->
                     <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, illum dolores? Aut nihil ut placeat officiis ducimus quos temporibus nostrum!</p>
                   </div>
             </div>
@@ -48,50 +48,48 @@
         </div>
     </div>
 
-    
-    <div class="container mt-2">
-        <div class="row">
-            <div class="col-sm-8 offset-sm-2"><!-- .col-sm-10.offset-sm-1 -->
-                <h2>Adresimiz</h2> <!-- h2{Vizyonumuz}^p*3>lorem10 -->
-                <address><!-- address -->
-                  <!-- p>lorem20 -->
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id molestiae unde eius fugit fugiat ducimus architecto officia amet consequuntur voluptate.</p>
-                </address>
-
-                <hr>
-                <h2  class="mt-3">Bize Ulasin</h2>
-                <!-- Form -->
-                <form class="row g-3">
-                  <div class="col-12">
-                    <label for="inputEmail4" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="adres">
-                  </div>
-                  <div class="col-12">
-                    <label for="Bilgi" class="form-label">Bilgi</label>
-                    <textarea class="form-control" id="bilgi"></textarea>
-                  </div>
-                  <div class="col-12">
-                    <label for="inputCity" class="form-label">Sehir</label>
-                    <input type="text" class="form-control" id="sehir">
-                  </div>
-                  <div class="col-12">
-                    <label for="inputState" class="form-label">Bize Nasil Ulastin?</label>
-                    <select id="inputState" class="form-select">
-                      <option selected>Seciminiz...</option>
-                      <option>Sosyal Medya</option>
-                      <option>Google</option>
-                      <option>Reklam</option>
-                      <option>Referans</option>
-                    </select>
-                  </div>
-                  <div class="col-12">
-                    <button type="submit" class="btn btn-primary">Gonder</button>
-                  </div>
-                </form>
-                <!-- Form End -->
+    <div class="container-fluid md-4">
+      <div class="row bg-dark text-light">
+        <div class="col-sm-6 ms-0 ps-0">
+            <img src="https://picsum.photos/id/249/600/250" alt="" class="w-100"><!-- img.w-100 -->
+        </div>
+        <div class="col-sm-6 ">
+            <div>
+                <!-- p*3>lorem10 -->
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima, fugiat!</p>
+                <p>Porro sapiente maiores saepe in aspernatur omnis, expedita distinctio deleniti?</p>
+                <p>Cupiditate aliquid corrupti, hic a architecto ducimus dolore sunt quos?</p>
             </div>
         </div>
 
+        <hr>
+        <div class="col-sm-6  ">
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima, fugiat!</p>
+                <p>Porro sapiente maiores saepe in aspernatur omnis, expedita distinctio deleniti?</p>
+                <p>Cupiditate aliquid corrupti, hic a architecto ducimus dolore sunt quos?</p>
+            </div>
+        </div>
+        <div class="col-sm-6 ms-0 ps-0">
+          <img src="https://picsum.photos/id/249/600/250" alt="" class="w-100">
+        </div>
+
+        <hr>
+        <div class="col-sm-6 ms-0 ps-0">
+          <img src="https://picsum.photos/id/249/600/250" alt="" class="w-100">
+        </div>
+        <div class="col-sm-6">
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima, fugiat!</p>
+                <p>Porro sapiente maiores saepe in aspernatur omnis, expedita distinctio deleniti?</p>
+                <p>Cupiditate aliquid corrupti, hic a architecto ducimus dolore sunt quos?</p>
+            </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container mt-2">
       <!-- Projects -->
       <div class="row my-3"><!-- my-3->hem yukarı hem asagi -->
         <div class="col-sm-12">
